# claude-container

./: .coverage  .gitignore  AUTHENTICATION_FIX.md  CLAUDE.md  CLAUDE_PR_WORKFLOW_PLAN.md  CODEX_UNIVERSAL_REFACTOR.md  CONTRIBUTING.md  README.md  SMOKE_TESTS_SUMMARY.md  TASK_EDITOR_IMPLEMENTATION_PLAN.md  TASK_START_ISSUES.md  architecture_tasks.md  docker-reqs.md  permissions_workflow_example.md  pr-url-storage-analysis.md  pyproject.toml  setup-offline.sh  task-start.md  task-testing.md  task.md  task_storage.md  test.json  test_debug_workspace.sh  test_final_git_fix.sh  test_git_env_fix.sh  test_git_fix_v2.sh  test_git_ownership_fix.sh  test_git_root_fix.sh  test_login.sh  test_new_task_flow.sh  test_phase2_workflow.sh  test_quoting_fix.sh  test_task_command.sh  test_task_start.sh  test_task_start_error.sh  test_task_step3.sh  test_task_step3_fixed.sh  test_uid_fix.sh  test_uid_simplified.sh
.claude/: settings.local.json
.claude-container/: Dockerfile.claude  container_config.json  sessions.json
.github/workflows/: test.yml
architecture_tasks/: README.md  task_1_refactor_cli_task_command.md  task_2_extract_cli_utilities.md  task_3_service_layer_for_docker_and_git.md  task_4_enforce_file_length_lint.md  task_5_architecture_docs.md  task_6_dynamic_mcp_servers.md
claude-test-project/: .claude.yaml
claude-test-project/.claude-container/: Dockerfile.claude  container_config.json
claude-test-project/src/: main.py
claude_container/: README.md  __init__.py  __main__.py  cli.py  docker_manager.py  environment.py  test_git_communication.sh
claude_container/cli/: __init__.py  main.py  util.py
claude_container/core/: __init__.py  constants.py  container_runner.py  daemon_client.py  docker_client.py  dockerfile_generator.py  dockerfile_template.py  github_integration.py  image_builder.py  task_daemon.py  task_storage.py  wrapper_scripts.py
claude_container/models/: __init__.py  config.py  container.py  mcp.py  session.py  task.py
claude_container/services/: __init__.py  docker_service.py  exceptions.py  git_service.py
claude_container/utils/: __init__.py  config_manager.py  mcp_manager.py  path_finder.py  permissions_manager.py  session_manager.py
docs/: architecture_overview.md
docs/adr/: 000-adr-template.md  001-service-layer-abstraction.md  README.md
sandbox/: Dockerfile.mount-test  approve-permissions.sh  debug-claude-auth.sh  mount-claude-test.sh  test-anthropic-container.sh  test-claude-auth-apikey.sh  test-claude-auth-final.sh  test-claude-auth-simple.sh  test-claude-auth.sh  test-claude-mount.sh  test-claude.sh  test-in-container.sh  test-modules-mount.sh  test-mount-claude-from-host.sh  test-mount-node-modules.sh  test-mount-npm-global.sh  test-mounted-claude.sh  test-npm-mount.sh  test-task.sh  test-with-host-config.sh
sandbox/.devcontainer/: Dockerfile
scripts/: check_file_length.py  codex-setup.sh
simple-test/.claude-container/: sessions.json
tests/: conftest.py  test_main.py
tests/cli/: test_main.py
tests/core/: test_container_runner.py  test_docker_client.py  test_dockerfile_generator.py  test_github_integration.py  test_task_daemon.py  test_task_storage.py
tests/models/: test_config.py  test_mcp.py
(+55 files in other folders)
